<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="cd_app_logo">App logo</string>
    <string name="label_start">start</string>
    <string name="label_exercise_slogan">get ready for</string>
    <string name="label_exercise_name">doing exercise %1$s</string>
    <string name="label_rest_name">get ready for %1$s</string>
    <string name="ex_abdominal_crunch">abdominal crunch</string>
    <string name="ex_high_knees_running_in_place">high knees running in place</string>
    <string name="ex_jumping_jacks">jumping jacks</string>
    <string name="ex_lunge">lunge</string>
    <string name="ex_plank">plank</string>
    <string name="ex_push_up">push-up</string>
    <string name="ex_push_up_rotation">push-up and rotation</string>
    <string name="ex_side_plank">side plank</string>
    <string name="ex_squat">squat</string>
    <string name="ex_step_up_onto_chair">step up onto chair</string>
    <string name="ex_triceps_dip_on_chair">triceps dip on chair</string>
    <string name="ex_wall_sit">wall sit</string>
    <string name="ex_done">all done!</string>
    <string name="ex_finish">finish</string>
    <string name="slogan_finished">You cleared all exercises.</string>
    <string name="title_congrats">Congratulations!</string>
    <string name="title_confirm_back_navigation">Are you sure?</string>
    <string name="confirm_back_navigation">This will stop your workout. You\'ve come this far, are
        you sure you want to quit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="label_bmi">bmi</string>
    <string name="title_bmi">Calculator</string>
    <string name="label_calculator">calculator</string>
    <string name="hint_height_in_cm">your height (cm)</string>
    <string name="hint_weight_in_kg">your weight (kg)</string>
    <string name="hint_height_in_in">your height (in)</string>
    <string name="hint_weight_in_lb">your weight (lb)</string>
    <string name="title_bmi_result">Your BMI</string>
    <string name="adv_underweight">Being too skinny is just as unhealthy as being overweight.
        Change your dietary habits for a regular, healthy calorie intake.</string>
    <string name="adv_normal">Keep your current balance of diet and exercise.</string>
    <string name="adv_overweight">You are overweight, change your diet to a more balanced, healthier
        one and make sure to exercise regularly.</string>
    <string name="adv_obese_1">Please contact your physician for advice.</string>
    <string name="adv_obese_2">Please contact your physician for advice.</string>
    <string name="adv_obese_3">Please contact your physician for advice.</string>
    <string name="adv_undetermined">Please correct your input.</string>
    <string name="label_metric">Metric</string>
    <string name="label_imperial">Imperial</string>
    <string name="label_bmi_button">calculate your BMI</string>
    <string name="label_history">history</string>
    <string name="title_history_activity">History</string>
    <string name="cd_history">Icon of a calendar to symbolize history</string>
    <string name="title_history">Exercise history</string>
    <string name="lbl_no_items_history">No exercises in history…</string>
    <string name="label_start_colon">Start:&#160;</string>
    <string name="label_end_colon">End:&#160;</string>
    <string name="lbl_skipped_colon">Skipped:&#160;</string>
    <string name="cd_workout_completed">Illustrates if the workout was completed or not</string>
    <string name="cd_delete_workout">CLick to delete this workout from your history.</string>
    <string name="toast_delete_confirmed">Workout deleted.</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="title_delete_record">Delete Record</string>
    <string name="tts_finished_workout">Congratulations of finishing your workout.</string>
    <string name="cd_skip_this_exercise">Skip this exercise.</string>
</resources>