<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm_back_navigation"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="@dimen/size_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_global"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_back_navigation"
        android:textColor="@color/accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm"
        android:padding="@dimen/padding_global"/>

    <Button
        android:id="@+id/btn_confirm_back_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textSize="@dimen/size_button_text"
        android:textColor="@color/accent"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_confirm_back_no"
        android:layout_marginBottom="@dimen/padding_global"/>

    <Button
        android:id="@+id/btn_confirm_back_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="@dimen/size_button_text"
        android:textColor="@color/accent"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm"
        app:layout_constraintStart_toEndOf="@id/btn_confirm_back_yes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/padding_global"/>


</androidx.constraintlayout.widget.ConstraintLayout>