<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_history"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primary"
        app:title="@string/title_history_activity"
        android:theme="@style/Theme.7MinuteWorkout.Toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/accent" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tb_history"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginVertical="@dimen/padding_global"
        android:textSize="@dimen/text_title"
        android:text="@string/title_history"
        android:textColor="@color/accent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exercise_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:paddingHorizontal="@dimen/padding_global"
        android:layout_marginTop="@dimen/padding_global"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_no_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_exercise_items"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/lbl_no_items_history"
        android:gravity="center"
        android:textSize="@dimen/size_button_text"
        android:textStyle="italic" />
</androidx.constraintlayout.widget.ConstraintLayout>