<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_global"
    tools:context=".MainActivity">

   <ImageView
       android:layout_marginTop="@dimen/margin_extra"
      android:id="@+id/iv_logo"
       android:layout_width="match_parent"
       android:layout_height="@dimen/size_logo_h"
       android:src="@drawable/logo_7mw"
       app:layout_constraintTop_toTopOf="parent"
       android:contentDescription="@string/cd_app_logo" />

   <FrameLayout
       android:id="@+id/fl_start_button_wrapper"
       android:layout_width="150dp"
       android:layout_height="150dp" 
       app:layout_constraintTop_toBottomOf="@+id/iv_logo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/cl_bmi_wrapper"
       android:background="@drawable/item_circular_accent_border_grey_ripple_background">
         
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_start"
          android:textAllCaps="true"
          android:layout_gravity="center"
          android:textColor="@color/primary"
          android:textSize="@dimen/size_button_text"
          android:textStyle="bold" />
   </FrameLayout>

   <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_bmi_wrapper"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/fl_start_button_wrapper"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toStartOf="@id/cl_history_wrapper">
      <FrameLayout
       android:id="@+id/fl_bmi_button_wrapper"
       android:layout_width="90dp"
       android:layout_height="90dp"
       android:layout_marginTop="@dimen/margin_elements"
          app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:background="@drawable/item_circular_primary_ripple_background">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_bmi"
          android:textAllCaps="true"
          android:layout_gravity="center"
          android:textColor="@color/accent"
          android:textSize="@dimen/size_button_text"
          android:textStyle="bold" />
   </FrameLayout>

   <TextView
       android:id="@+id/tv_label_calculator"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/padding_global"
       app:layout_constraintTop_toBottomOf="@id/fl_bmi_button_wrapper"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:text="@string/label_calculator"
      android:textColor="@color/primary"
      android:textSize="@dimen/size_button_sub_text"
      android:textAllCaps="true"
      android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_history_wrapper"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/fl_start_button_wrapper"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toEndOf="@id/cl_bmi_wrapper"
       app:layout_constraintEnd_toEndOf="parent">
   <FrameLayout
       android:id="@+id/fl_history_button_wrapper"
       android:layout_width="90dp"
       android:layout_height="90dp"
       android:layout_marginTop="@dimen/margin_elements"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:background="@drawable/item_circular_primary_ripple_background">

      <ImageView
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:src="@drawable/ic_baseline_date_range_24"
          android:contentDescription="@string/cd_history" />
   </FrameLayout>

   <TextView
       android:id="@+id/tv_label_history"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/padding_global"
       app:layout_constraintTop_toBottomOf="@id/fl_history_button_wrapper"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:text="@string/label_history"
       android:textColor="@color/primary"
       android:textSize="@dimen/size_button_sub_text"
       android:textAllCaps="true"
       android:textStyle="bold"/>
   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>