<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_item_workout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding_global">
    <ImageView
        android:id="@+id/iv_item_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@drawable/ic_baseline_check_24" />
    <TextView
        android:id="@+id/tv_item_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/iv_item_completed"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/padding_global"
        android:text="@string/label_start_colon"/>
    <TextView
        android:id="@+id/tv_item_start_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_item_start_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10/10/2022 16:07"/>
    <TextView
    android:id="@+id/tv_item_end_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/iv_item_completed"
    app:layout_constraintTop_toBottomOf="@id/tv_item_start_label"
    android:layout_marginStart="@dimen/padding_global"
    android:text="@string/label_end_colon"/>
    <TextView
        android:id="@+id/tv_item_end_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_item_start_label"
        app:layout_constraintTop_toBottomOf="@id/tv_item_start_dt"
        tools:text="10/10/2022 16:17"/>
    <TextView
        android:id="@+id/tv_skipped_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra"
        app:layout_constraintStart_toEndOf="@+id/tv_item_start_dt"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lbl_skipped_colon" />
    <TextView
        android:id="@+id/tv_skipped_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_skipped_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2" />
    <ImageView
        android:id="@+id/iv_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>